--- a/CafeProject/Cafe/templates/Cafe/index.html
+++ b/CafeProject/Cafe/templates/Cafe/index.html
@@ -11,8 +11,9 @@
     <title>Carousel Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
+	{% load staticfiles %}
+    <!-- Custom styles for this template -->
+    <link href="{% static 'Cafe/css/bootstrap.css' %}" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -21,9 +22,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-	{% load staticfiles %}
-    <!-- Custom styles for this template -->
-    <link href="{% static 'Cafe/css/bootstrap.css' %}" rel="stylesheet">
+	
   </head>
   <body>
   <!-- NAVBAR
@@ -82,14 +81,15 @@
 <h3>Registration Form</h3>  
 </div>  
 <div class="modal-body">  
-<form action="[YOUR ACTION]" id="registerForm" method="post" accept-charset="UTF-8">
+<form action="[YOUR ACTION]" id="registerForm" onsubmit="return checkPassword();" method="post" accept-charset="UTF-8">
 <table>
 <tr>
 <td>
 	<label>Name </label>
 </td>
 <td>	
-  <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" required/>
+  <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" data-validation="length alphabetic" 
+		 data-validation-length="3-12" data-validation-error-msg="The user name has to be an alphabetic value between 3-12 characters" />
   </td>
  </tr>
  <tr>
@@ -97,21 +97,21 @@
 	<label>Employee Id  </label>
 </td>
 <td>	
-  <input id="userid" style="margin-bottom: 15px;" type="text" name="user[Id]" size="30" />
+  <input id="userid" style="margin-bottom: 15px;" type="text" name="user[Id]" size="30" data-validation="number" />
   </td>
  </tr>
  <tr>
  <td>
   <label>Phone </label>
 </td><td>  
-  <input id="user_phone" style="margin-bottom: 15px;" type="text" name="user[phone]" size="30" />
+  <input id="user_phone" style="margin-bottom: 15px;" type="text" name="user[phone]" size="30" data-validation="number"/>
   </td>
  </tr>
  <tr>
  <td>
   <label>Password </label>
   </td><td>
-  <input id="user_password" style="margin-bottom: 15px;" type="password" name="user[password]" size="30" />
+  <input id="user_pass" style="margin-bottom: 15px;" type="password" name="user[password]" size="30" />
   </td>
  </tr>
  <tr>
@@ -119,6 +119,7 @@
   <label>Confirm Password &nbsp; &nbsp;  </label>
   </td><td>
   <input id="confirm_user_password" style="margin-bottom: 15px;" type="password" name="user[password]" size="30" />
+  <div id="passincorrect"></div>
   </td>
   </tr>
   </table>
@@ -215,27 +216,28 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="{% static 'Cafe/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'Cafe/js/jquery.form.js' %}"></script>
-    <script src="{% static 'Cafe/js/jquery.validate.min.js' %}"></script>
-    <script src="{% static 'Cafe/js/additional-methods.min.js' %}"></script>
-	<script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.1.38/jquery.form-validator.min.js"></script>
+<script type="text/javascript">
   $(document).ready(function(){
     $('.carousel').carousel();
-    $("#registerForm").validate({
-  	  rules: {
-  		  user_username: {
-  			  required: true
-  		  },
-    		  userid: {
-    			  digits: true
-    	  },
-    	  	  user_phone: {
-    	  		  digits:true
-    	  }  	  		  
-  	  }
-    });
   });
-  
+  $.validate({
+	  validateOnBlur : false
+  });
+  function checkPassword()
+  {
+	  pass = $("#user_pass").val();
+	  confirmpass = $("#confirm_user_password").val();
+	  if (pass !== confirmpass)
+		  {
+		  $("#passincorrect").empty();
+		  $("#passincorrect").append("<label style='color:red'>Password mismatch-Please enter again</label>")	
+		  return false;
+		  }
+	  else{
+		  $("#passincorrect").empty();
+	  		}
+  }
 </script>
 </body>
 </html>
