--- a/CafeProject/Cafe/templates/Cafe/menuCafe.html
+++ b/CafeProject/Cafe/templates/Cafe/menuCafe.html
@@ -293,10 +293,26 @@
         </tbody>
       </table>
 
-    <h2><span class="label label-default" width:"100%">Total : INR 124</span></h2> 
+    <h2 style="display:inline-block"><span class="label label-default" width:"100%">Total : INR 124</span></h2> 
+    <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal" style="float:right;margin-top:15px">
+  Checkout
+</button>
 </div>
 </div>
 </div>
+<!-- CONFIRMING MODAL FOR CHECKOUT -->
+<div id="exampleModal" class="modal fade in bs-example-modal-sm" style="display: none;margin-top:auto;margin-bottom:auto; ">  
+<div class="modal-header">  
+<a class="close" data-dismiss="modal">x</a>  
+<h3>Are you sure ?</h3>  
+</div>  
+  <div class="modal-footer">  
+<input class="submit btn btn-default"  value="Yes"/>
+<a href="#" class="btn  btn-default" data-dismiss="modal">Close</a>  
+
+</div>
+
+</div>  
 
       <!-- FOOTER -->
       <footer>
