--- a/CafeProject/Cafe/templates/Cafe/menuCafe.html
+++ b/CafeProject/Cafe/templates/Cafe/menuCafe.html
@@ -23,16 +23,19 @@
 	{% load staticfiles %}
     <!-- Custom styles for this template -->
     <link href="{% static 'Cafe/css/bootstrap.css' %}" rel="stylesheet">
+	<script src="http://cdn.webrupee.com/js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="http://cdn.webrupee.com/font">
+	<script type="text/javascript" src="lib/jquery.js"></script>
   </head>
-  <body>
+  <body background="{% static 'Cafe/img/background.png' %}" style="background-repeat: no-repeat;">
   <!-- NAVBAR
 ================================================== -->
-  <div class="navbar-wrapper" style="background-color:whitesmoke">
-      <div class="container">
+  <div class="navbar-wrapper" >
+      <div class="container" >
 
           <div class="navbar navbar-static-top" role="navigation" style="margin-bottom:0px">
 
-          <div class="container">
+          <div class="container" style="background-color:#282364">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -40,12 +43,33 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <img class="navbar-brand"   style="height: 51px;width: 124px;padding-bottom: 5px;padding-top: 5px" src="{% static 'Cafe/img/ugam_logo.png' %}" href="www.ugamsolutions.com"></img>
+              <img class="navbar-brand"   style="height: 51px;width: 124px;padding-bottom: 5px;padding-top: 5px" src="{% static 'Cafe/img/ugamLogobc.png' %}" href="www.ugamsolutions.com"></img>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav pull-right">
-       		<li style="position:relative; left:-10px; top:15px; text-decoration:underline" id="username"></li>
-       		<li style="position:relative; left:-10px"><a href="/users/sign_up">Log out</a></li>
+          <li class="divider-vertical"></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
+            <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+			<!-- Login form here -->
+			<form action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
+	<label>Username:</label>		
+  <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" />
+  <label>Password:</label>
+  <input id="user_password" style="margin-bottom: 15px;" type="password" name="user[password]" size="30" />
+  <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
+  <label class="string optional" for="user_remember_me"> Remember me</label>
+ 
+  <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
+  
+</form>
+<br/>
+			</div>
+			<li style="position:relative; left:-10px;"><a href="/users/logout">Log Out</a></li>
+              
+			  
+            
+          </li>
               </ul>
             </div>
           </div>
@@ -59,7 +83,7 @@
    <!--  Carousel - consult the Twitter Bootstrap docs at 
       http://twitter.github.com/bootstrap/javascript.html#carousel -->
 	  <div id="main_template" style="margin-left: 115px;margin-right: 115px;margin-top:10px">
-	<div class="panel panel-default" style="width:55%;display:inline-block">
+	<div class="panel panel-default" style="width:55%;display:inline-block;box-shadow: 16px 3px 10px -7px #888, -10px 10px 20px -7px #888;">
   <div class="panel-heading">
     <h3 class="panel-title"><span class="glyphicon glyphicon-cutlery"></span>  MENU</h3>
   </div>
@@ -80,7 +104,7 @@
     <tr>
       <th width="70"># Left</th>
       <th width="500">Item Name</th>
-      <th width="150">Price (INR)</th>
+      <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
     </tr>
   </thead>
@@ -131,7 +155,7 @@
     <tr>
       <th width="70"># Left</th>
       <th width="500">Item Name</th>
-      <th width="150">Price (INR)</th>
+      <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
     </tr>
   </thead>
@@ -182,7 +206,7 @@
     <tr>
       <th width="70"># Left</th>
       <th width="500">Item Name</th>
-      <th width="150">Price (INR)</th>
+      <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
     </tr>
   </thead>
@@ -231,7 +255,7 @@
 
 </div>
 
-<div class="panel panel-primary" style="float:right;width:40%">
+<div class="panel panel-primary" style="float:right;width:40%;border-color: rgb(168, 168, 235);box-shadow: 16px 3px 10px -7px #888, -10px 10px 20px -7px #888;">
 <div class="panel-heading"><span class="glyphicon glyphicon-shopping-cart"></span>  Checkout Cart</div>
   <div class="panel-body">
     <p>LIST OF ITEMS:</p>
@@ -243,7 +267,7 @@
           <tr>
             <th>Item Name</th>
             <th>Quantity</th>
-            <th>Price(INR)</th>
+            <th>Price <span class="WebRupee">&#x20B9;</span></th>
 			<th>Action</th>
           </tr>
         </thead>
@@ -271,7 +295,7 @@
         </tbody>
       </table>
 
-    <h2 style="display:inline-block"><span class="label label-default" width:"100%">Total : INR 124</span></h2> 
+    <h2 style="display:inline-block"><span class="label label-default" width:"100%">Total : <span class="WebRupee">&#x20B9;</span> 124</span></h2> 
     <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal" style="float:right;margin-top:15px">
   Checkout
 </button>
@@ -294,8 +318,7 @@
 
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+       <p style="padding-left:8%">&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
@@ -309,10 +332,6 @@
 	<script>
   $(document).ready(function(){
     $('.carousel').carousel();
-    username = localStorage.getItem("username")
-    alert(username);
-    $('#username').empty()
-    $('#username').append("Welcome, "+username)
   });
   
   $('#menu-pills a').click(function (e) {
